Added tuts link and remote js

--- a/index.html
+++ b/index.html
@@ -1409,6 +1409,7 @@ if (doc == null) {
                 <h2>Links</h2>
 
                 <ul>
+                    <li>Tuts - <a href="https://gist.github.com/plastiv/6f097406b4ed9a0d096c">gist.github.com/plastiv/6f097406b4ed9a0d096c</a></li>
                     <li>Libs - <a href="https://gist.github.com/plastiv/985b2f5eb781e975420a">gist.github.com/plastiv/985b2f5eb781e975420a</a></li>
                 </ul>
             </section>
@@ -1439,7 +1440,8 @@ if (doc == null) {
 					{ src: 'revealjs/plugin/markdown/markdown.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
 					{ src: 'revealjs/plugin/highlight/highlight.js', async: true, condition: function() { return !!document.querySelector( 'pre code' ); }, callback: function() { hljs.initHighlightingOnLoad(); } },
 					{ src: 'revealjs/plugin/zoom-js/zoom.js', async: true },
-					{ src: 'revealjs/plugin/notes/notes.js', async: true }
+					{ src: 'revealjs/plugin/notes/notes.js', async: true },
+					{ src: 'revealjs/plugin/remotes/remotes.js', async: true }
 				]
 			});
 </script>
