Fixed wrong property

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@ public interface FooService {
 
                 <div style="position:relative;">
 
-                <pre style="stretch"><code data-trim>
+                <pre class="stretch"><code data-trim>
 Observable
     .just(1, 2, 3)
     .subscribe(new Subscriber&lt;Integer&gt;() {
