--- a/index.html
+++ b/index.html
@@ -99,19 +99,6 @@
                 <img data-src="images/andre-alians.png" alt="embrace observable"/>
             </section>
 
-
-            <section>
-                <h2>Magnitude of interest</h2>
-
-                <ul>
-                    <li class="fragment">(June 2009) - First video about Rx.NET on Microsoft's Channel 9 dev portal</li>
-                    <li class="fragment">(mid 2011)  - Rx.NET official release</li>
-                    <li class="fragment">(Feb 2013)  - Netflix goes public w/ a independent Rx port: RxJava</li>
-                    <li class="fragment">(Aug 2013)  - Reactive Programming on Android With RxJava article</li>
-                    <li class="fragment">(Nov 2014)  - RxJava release</li>
-                </ul>
-            </section>
-
         </section>
 
 
@@ -211,11 +198,11 @@ Observable
     .just(1, 2, 3)
     .subscribe(new Subscriber&lt;Integer&gt;() {
         public void onCompleted() {
-            System.out.println(&quot;Completed Observable.&quot;);
+            System.out.println(&quot;Completed&quot;);
         }
 
         public void onError(Throwable throwable) {
-            System.err.println(&quot;Whoops: &quot; + throwable.getMessage());
+            System.err.println(&quot;Error: &quot; + throwable.getMessage());
         }
 
         public void onNext(Integer integer) {
@@ -228,7 +215,7 @@ Observable
 Got: 1
 Got: 2
 Got: 3
-Completed Observable.
+Completed
             </code></pre>
             </div>
 
@@ -243,6 +230,8 @@ Completed Observable.
         <section>
             <h2>Consuming Observables</h2>
 
+            <div style="position:relative;">
+
             <pre class="stretch"><code data-trim>
 Observable
     .just(1, 2, 3)
@@ -255,11 +244,11 @@ Observable
     })
     .subscribe(new Subscriber&lt;Integer&gt;() {
         public void onCompleted() {
-            System.out.println(&quot;Completed Observable.&quot;);
+            System.out.println(&quot;Completed&quot;);
         }
 
         public void onError(Throwable throwable) {
-            System.err.println(&quot;Whoops: &quot; + throwable.getMessage());
+            System.err.println(&quot;Error: &quot; + throwable.getMessage());
         }
 
         public void onNext(Integer integer) {
@@ -267,11 +256,12 @@ Observable
         }
     });
             </code></pre>
-            <pre class="fragment"><code data-trim>
+            <pre class="fragment" style="width:30%;top: 0px;right: 0px;position: absolute;"><code data-trim>
 // This prints:
 Got: 1
-Whoops: I don't like 2
+Error: I don't like 2
             </code></pre>
+                </div>
 
             <aside class="notes">
                 <p>You can also test the error case by throwing an artificial exception when the value 2 is emitted:</p>
@@ -607,25 +597,25 @@ Observable
                 <h4>Merge</h4>
 
                 <pre><code data-trim>
-                    Observable&lt;Integer&gt; evens = Observable.just(2, 4, 6, 8, 10);
-                    Observable&lt;Integer&gt; odds = Observable.just(1, 3, 5, 7, 9);
+Observable&lt;Integer&gt; evens = Observable.just(2, 4, 6, 8, 10);
+Observable&lt;Integer&gt; odds = Observable.just(1, 3, 5, 7, 9);
 
-                    Observable
-                    .merge(evens, odds)
-                    .subscribe(System.out::println);
+Observable
+.merge(evens, odds)
+.subscribe(System.out::println);
                 </code></pre>
                 <pre class="fragment"><code data-trim>
-                    // This prints:
-                    2
-                    4
-                    6
-                    8
-                    10
-                    1
-                    3
-                    5
-                    7
-                    9
+// This prints:
+2
+4
+6
+8
+10
+1
+3
+5
+7
+9
                 </code></pre>
 
                 <aside class="notes">
@@ -639,20 +629,20 @@ Observable
                 <h4>Zip</h4>
 
                 <pre><code data-trim>
-                    Observable&lt;Integer&gt; evens = Observable.just(2, 4, 6, 8, 10);
-                    Observable&lt;Integer&gt; odds = Observable.just(1, 3, 5, 7, 9);
+Observable&lt;Integer&gt; evens = Observable.just(2, 4, 6, 8, 10);
+Observable&lt;Integer&gt; odds = Observable.just(1, 3, 5, 7, 9);
 
-                    Observable
-                    .zip(evens, odds, (v1, v2) -&gt; v1 + &quot; + &quot; + v2 + &quot; is: &quot; + (v1 + v2))
-                    .subscribe(System.out::println);
+Observable
+.zip(evens, odds, (v1, v2) -&gt; v1 + &quot; + &quot; + v2 + &quot; is: &quot; + (v1 + v2))
+.subscribe(System.out::println);
                 </code></pre>
                 <pre class="fragment"><code data-trim>
-                    // This prints:
-                    2 + 1 is: 3
-                    4 + 3 is: 7
-                    6 + 5 is: 11
-                    8 + 7 is: 15
-                    10 + 9 is: 19
+// This prints:
+2 + 1 is: 3
+4 + 3 is: 7
+6 + 5 is: 11
+8 + 7 is: 15
+10 + 9 is: 19
                 </code></pre>
 
                 <aside class="notes">
@@ -664,7 +654,7 @@ Observable
         </section>
 
 
-        
+
         <section id="transforming-observable">
 
             <section>
@@ -686,12 +676,13 @@ Observable
 
                 <pre class="stretch"><code data-trim>
 Observable
-    .interval(10, TimeUnit.MILLISECONDS)
-    .take(20)
+    .range(0, 50)
     .map(new Func1&lt;Long, String&gt;() {
         @Override
         public String call(Long input) {
-            if (input % 3 == 0) {
+            if (input % 15 == 0) {
+                return &quot;FizzBuzz&quot;;
+            } esle if (input % 3 == 0) {
                 return &quot;Fizz&quot;;
             } else if (input % 5 == 0) {
                 return &quot;Buzz&quot;;
@@ -1038,14 +1029,6 @@ Got: 7 (RxComputationThreadPool-6)
 
 
             <section>
-                <h4>Schedulers & Threads</h4>
-
-                <img data-src="images/schedulers-chain.jpg"
-                     alt="Schedulers chain">
-            </section>
-
-
-            <section>
                 <h4>ObserveOn scheduler</h4>
 
                 <pre><code data-trim>
@@ -1078,6 +1061,14 @@ Got: 7 (RxComputationThreadPool-6)
                     <p>Everything before the observeOn call is executed in main, everything below in the Scheduler:</p>
                     <p>There is also a way to use Schedulers directly to schedule operations, please refer to the documentation here: https://github.com/ReactiveX/RxJava/wiki/Scheduler#using-schedulers</p>
                 </aside>
+            </section>
+
+
+            <section>
+                <h4>Schedulers & Threads</h4>
+
+                <img data-src="images/schedulers-chain.jpg"
+                     alt="Schedulers chain">
             </section>
 
 
@@ -1400,18 +1391,6 @@ if (doc == null) {
 
         <section id="results">
 
-            <section>
-                <h2>Seems to work? Ship it!</h2>
-
-                <ul>
-                    <li class="fragment">Lamda support</li>
-                    <li class="fragment">Hot vs Cold Observable</li>
-                    <li class="fragment">Back pressure</li>
-                    <li class="fragment">Architecture design: bus, cache, lifecycle, rotation, memory leaks</li>
-                </ul>
-            </section>
-
-
             <section id="resume-pro">
                 <h2>Pro</h2>
 
@@ -1452,7 +1431,12 @@ if (doc == null) {
                     <li>Tuts - <a href="https://gist.github.com/plastiv/6f097406b4ed9a0d096c">gist.github.com/plastiv/6f097406b4ed9a0d096c</a></li>
                     <li>Libs - <a href="https://gist.github.com/plastiv/985b2f5eb781e975420a">gist.github.com/plastiv/985b2f5eb781e975420a</a></li>
                 </ul>
+            </section>
 
+            <section>
+                <h2>Thanks! Questions?</h2>
+
+                <p>#oiw2015 <a href="https://twitter.com/plastiv/">@plastiv</a></p>
             </section>
         </section>
 
@@ -1482,6 +1466,7 @@ if (doc == null) {
 					{ src: 'revealjs/plugin/highlight/highlight.js', async: true, condition: function() { return !!document.querySelector( 'pre code' ); }, callback: function() { hljs.initHighlightingOnLoad(); } },
 					{ src: 'revealjs/plugin/zoom-js/zoom.js', async: true },
 					{ src: 'revealjs/plugin/notes/notes.js', async: true },
+//					{ src: 'revealjs/plugin/notes/notes.js', async: true }
 					{ src: 'revealjs/plugin/remotes/remotes.js', async: true }
 				]
 			});
