--- a/index.html
+++ b/index.html
@@ -1465,9 +1465,9 @@ if (doc == null) {
 					{ src: 'revealjs/plugin/markdown/markdown.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
 					{ src: 'revealjs/plugin/highlight/highlight.js', async: true, condition: function() { return !!document.querySelector( 'pre code' ); }, callback: function() { hljs.initHighlightingOnLoad(); } },
 					{ src: 'revealjs/plugin/zoom-js/zoom.js', async: true },
-					{ src: 'revealjs/plugin/notes/notes.js', async: true },
-//					{ src: 'revealjs/plugin/notes/notes.js', async: true }
-					{ src: 'revealjs/plugin/remotes/remotes.js', async: true }
+//					{ src: 'revealjs/plugin/notes/notes.js', async: true },
+					{ src: 'revealjs/plugin/notes/notes.js', async: true }
+//					{ src: 'revealjs/plugin/remotes/remotes.js', async: true }
 				]
 			});
 </script>
